@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-09T12:28:35Z",
+  "timestamp" : "2025-10-10T01:04:00Z",
   "count_outdated" : 5363,
   "uniques_outdated" : 2974,
-  "count" : 5385,
-  "uniques" : 2995,
+  "count" : 5386,
+  "uniques" : 2996,
   "clones" : [
     {
       "timestamp": "2025-09-26T00:00:00Z",
@@ -115,12 +115,12 @@
     },
     {
       "timestamp": "2025-10-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
