@@ -1,6 +1,6 @@
 {
-  "count": 22,
-  "uniques": 6,
+  "count": 23,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2025-09-26T00:00:00Z",
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2025-10-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
